test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/pvc/pvc-patched.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc
  labels:
    foo: bar
spec:
  storageClassName: manual
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 3Gi
