test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/pvc/rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: test-deleting-pod
rules:
- apiGroups:
  - ""
  resources:
  - persistentvolumeclaims
  verbs:
  - delete
  - list
  - get
  - create
  - update
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: test-deleting-pod
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: test-deleting-pod
subjects:
- kind: ServiceAccount
  name: kyverno-background-controller
  namespace: kyverno
